--- a/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
+++ b/ElectroMarket/CapaPresentacion/CapaPresentacion.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -66,6 +67,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormAdmin\Graficos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAdmin\Graficos.Designer.cs">
+      <DependentUpon>Graficos.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormSuperAdmin\BackupBD.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +178,9 @@
     <Compile Include="VistaVendedor.Designer.cs">
       <DependentUpon>VistaVendedor.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FormAdmin\Graficos.resx">
+      <DependentUpon>Graficos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormSuperAdmin\BackupBD.resx">
       <DependentUpon>BackupBD.cs</DependentUpon>
     </EmbeddedResource>
@@ -253,6 +263,10 @@
     <None Include="Resources\logo-electromarket.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CapaDatos\CapaDatos.csproj">
+      <Project>{324EF55A-5673-4B5B-88A8-2FA9A363147D}</Project>
+      <Name>CapaDatos</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CapaEntidades\CapaEntidades.csproj">
       <Project>{351b3476-3e2d-43da-92f2-b5dd2d86cd20}</Project>
       <Name>CapaEntidades</Name>
